# retrieve-analyze-python

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
src/gorest/: __init__.py  users_v1.py  users_v2.py
src/retrieve_analyze/: __init__.py  analyze.py  lambda_handler.py  retrieve.py  retrieve_all.py
tests/gorest/: test_users_v2.py
